# book-swap

./: .git-commit-msg.tmp  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT-RUNBOOK.md  DESIGN.md  Makefile  PRODUCTION-READINESS.md  README.md  SECURITY.md  package.json  security-action-plan.md
backend/: .dockerignore  .env  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.stag.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh
backend/.github/workflows/: ci.yml
backend/apps/: __init__.py
backend/apps/books/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py  views_og.py
backend/apps/exchanges/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/messaging/: admin.py  apps.py  consumers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/notifications/: admin.py  apps.py  consumers.py  models.py  serializers.py  (+4 more)
backend/bookswap/: admin.py  apps.py  consumers.py  external_http.py  middleware.py  models.py  pagination.py  permissions.py  routing.py  serializers.py  services.py  signals.py  social_pipeline.py  tasks.py  throttles.py  urls.py  utils.py  validators.py  views.py  ws_auth.py  ws_first_msg_auth.py
backend/config/: asgi.py  authentication.py  celery.py  gunicorn.py  urls.py  wsgi.py
backend/scripts/: check-env.sh  entrypoint.sh  migrate_with_lock.py
(+1074 files in other folders)
